<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonApp3</string>
    <string name="action_settings">Settings</string>
    <string name="nom">Nom </string>
    <string name="prenom">Prénom </string>
    <string name="age">Age </string>
    <string name="skills">Compétences </string>
    <string name="phone">PhoneNumber </string>
    <string name="nomHint">saisir le nom</string>
    <string name="prenomHint">saisir le prénom</string>
    <string name="ageHint">saisir l\'age</string>
    <string name="skillsHint">saisir les compétences</string>
    <string name="phoneHint">saisir le tel</string>
    <string name="buttonValid">Valider</string>
    <string name="sayHello">Bonjour</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_call">ActivityCall</string>

</resources>
