<?xml version="1.0" encoding="utf-8"?>
<TableLayout
     	xmlns:android="http://schemas.android.com/apk/res/android"
	 	android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:stretchColumns="1"
		android:background="@color/couleurFond">
		
     <TableRow>

        <TextView
            android:id="@+id/TextViewNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textColor="@color/couleurTitre"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nomHint" />

    </TableRow>

    <TableRow>

	<TextView
	    android:id="@+id/textViewPrenom"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prenom"
	    android:textColor="@color/couleurTitre"
	    android:textSize="18sp" />

    <EditText
        android:id="@+id/EditTextPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prenomHint" /> 
    </TableRow>
    
	<TableRow>

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/couleurTitre"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/EditTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ageHint" />
    </TableRow>
    
 	<TableRow>

    <TextView
        android:id="@+id/textViewSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textColor="@color/couleurTitre"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/EditTextSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/skillsHint"/>
	</TableRow>

 	<TableRow>

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/couleurTitre"
        android:textSize="18sp" />
        
    <EditText
        android:id="@+id/EditTextPhone"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneHint"/>

    </TableRow>

 	<Button
 	    android:id="@+id/ButtonEnvoyer"
 	    android:layout_width="150dp"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center_vertical"
 	    android:text="@string/buttonValid" />

    </TableLayout>
